fix(runtime): deleted overflow hidden

--- a/src/runtime/styles/index.scss
+++ b/src/runtime/styles/index.scss
@@ -10,7 +10,6 @@ $yfmAnchorWidth: 24px;
     &-content {
         display: none;
         padding-left: $paddingLeft;
-        overflow: hidden;
         transition: height 0.3s ease-in-out;
 
         & > #{$class} {
